environment.Environment.scala.error
Erreur de compilation :
Environment:3: error: identifier expected but '}' found.
	}
        ^